--- a/Styles/project.css
+++ b/Styles/project.css
@@ -24,7 +24,7 @@ header {
     background-color: var(--clr-accent);
     color: var(--clr-darker);
     text-align: center;
-    width: fit-content;
+    width: max-content;
     border-radius: 1em;
     margin: 1.5em auto 0;
     padding: 0.4em;
