--- a/Styles/snake.css
+++ b/Styles/snake.css
@@ -8,7 +8,7 @@
     text-align: center;
     background-color: var(--clr-accent);
     color: var(--clr-darker);
-    width: fit-content;
+    width: max-content;
     padding: 0.5em;
     margin: 0 auto;
     border-radius: 1em;
